Bug 294032 - ACS ( advanced color selector ) , color jump on some particular 'Type and Shape'
Summary: ACS ( advanced color selector ) , color jump on some particular 'Type and Shape'
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 325839 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-14 01:05 UTC by David REVOY
Modified: 2013-12-28 14:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kritarc that causes bug for me (12.40 KB, application/octet-stream)
2012-04-13 10:29 UTC, Tom Hall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2012-02-14 01:05:17 UTC
Version:           svn trunk (using KDE 4.7.4) 
OS:                Linux

I tryed other type of color selector shapes today just by curiosity ( even if I use always the same triangle in a hue circle ). I found this 

Reproducible: Always

Steps to Reproduce:
1) Use this following 'Type and Shapes' in the configuration of the ACS :
http://img839.imageshack.us/img839/1903/20120214screenshot02.jpg

2) Try to drag the cursor on the top bar and on the down part, to select color of your choice ; ex , a pure orange ; a grey violet ; a black ; etc... 
http://img638.imageshack.us/img638/7567/20120214screenshot01.jpg

Actual Results:  
cursor jump or not stay in the last dropped position , makes color selecting difficult. 

Expected Results:  
fix ^ ^ or make them disapear from selection for 2.4

From IRC channel ; Sven confirmed ; but Bugsbane ( 64 bit Chakra, KDE 4.8 ) couldn't reproduce.
Comment 1 Halla Rempt 2012-02-17 15:11:15 UTC
Interesting... I get an assert when I try to reproduce:

Thread 1 (Thread 0x7fcb14cce760 (LWP 27064)):
[KCrash Handler]
#6  0x00007fcb0b9f4d95 in raise () from /lib64/libc.so.6
#7  0x00007fcb0b9f62ab in abort () from /lib64/libc.so.6
#8  0x00007fcb1410a9f4 in qt_message_output(QtMsgType, char const*) () from /usr/lib64/libQtCore.so.4
#9  0x00007fcb1410abaf in ?? () from /usr/lib64/libQtCore.so.4
#10 0x00007fcb1410ad54 in qFatal(char const*, ...) () from /usr/lib64/libQtCore.so.4
#11 0x00007fcb1410ad9a in qt_assert(char const*, char const*, int) () from /usr/lib64/libQtCore.so.4
#12 0x00007fcb10627b50 in KoColor::KoColor (this=0x7fff7730ac40, color=..., colorSpace=0x1977880) at /home/boud/kde/src/calligra/libs/pigment/KoColor.cpp:75
#13 0x00007fcaec4d97e8 in mouseEvent (e=<optimized out>, this=0x19695d0) at /home/boud/kde/src/calligra/krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector.cpp:289
#14 KisColorSelector::mouseEvent (this=0x19695d0, e=<optimized out>) at /home/boud/kde/src/calligra/krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector.cpp:283
#15 0x00007fcb0d0945e9 in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#16 0x00007fcb0d043c34 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#17 0x00007fcb0d0493bb in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#18 0x00007fcb0dd56e36 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#19 0x00007fcb141fa82c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#20 0x00007fcb0d044c02 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQtGui.so.4
#21 0x00007fcb0d0c0bc5 in ?? () from /usr/lib64/libQtGui.so.4
#22 0x00007fcb0d0bfa9a in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#23 0x00007fcb0d0e7d2a in ?? () from /usr/lib64/libQtGui.so.4
#24 0x00007fcb141f9a32 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#25 0x00007fcb141f9c2f in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#26 0x00007fcb141fddf7 in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#27 0x00007fcb146fd73d in kdemain (argc=<optimized out>, argv=<optimized out>) at /home/boud/kde/src/calligra/krita/main.cc:72
#28 0x00007fcb0b9e123d in __libc_start_main () from /lib64/libc.so.6
#29 0x0000000000400911 in _start () at ../sysdeps/x86_64/elf/start.S:113
Comment 2 Halla Rempt 2012-02-19 10:24:46 UTC
I can reproduce as well.
Comment 3 Halla Rempt 2012-02-29 11:04:15 UTC
See also 279500
Comment 4 Halla Rempt 2012-02-29 12:35:41 UTC
Git commit fb3cb1c8af8fe1f131147158e1dd011fac988a51 by Boudewijn Rempt.
Committed on 29/02/2012 at 12:06.
Pushed by rempt into branch 'master'.

Disable the broken color selectors for the 2.4 release
Related: bug 279500

REVERT after 2.4

M  +8    -8    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_combo_box.cpp

http://commits.kde.org/calligra/fb3cb1c8af8fe1f131147158e1dd011fac988a51
Comment 5 Tom Hall 2012-04-13 10:27:50 UTC
I experienced this bug yesterday. However, I was not using any of the 'Types and Shapes' that David mentions; I was using the basic triangle in hue ring (as I usually do). 

I noticed that moving my kritarc and starting with a new one made the bug go away (and putting the offending kritarc back makes the bug come back again). Therefore I will attach the offending kritarc in case it helps identify the cause (It's full of irrelevant stuff because I haven't changed kritarc for a while, but I've left everything in just in case it's something apparently irrelevant causing the bug).

After reading this bug, I tried some of the other types/shapes. I noticed that while the cursor jumps, the colour selected is the one the user clicked on, not the one it jumps to. (I couldn't really tell at a glance if the triangle+ring was doing the same, simply because it wasn't jumping so far.) Note that differs from bug 298039 (which I found while trying to diagnose this one) where the selected colour actually changes.
Comment 6 Tom Hall 2012-04-13 10:29:46 UTC
Created attachment 70360 [details]
kritarc that causes bug for me
Comment 7 Sven Langkamp 2012-07-22 15:33:08 UTC
Git commit 298791100f65d2fa4616a8c9b7bc0626d705d82f by Sven Langkamp.
Committed on 22/07/2012 at 17:31.
Pushed by langkamp into branch 'master'.

fix a bug where the color in the simple color selector was jumped to the mirrored position after selection

M  +4    -5    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_simple.cpp

http://commits.kde.org/calligra/298791100f65d2fa4616a8c9b7bc0626d705d82f
Comment 8 T Zachmann 2012-07-25 16:38:28 UTC
Git commit 7fabb4adc57c113f5c7ea077ead64bdbf6cd693f by Thorsten Zachmann, on behalf of Sven Langkamp.
Committed on 22/07/2012 at 17:31.
Pushed by zachmann into branch 'calligra/2.5'.

fix a bug where the color in the simple color selector was jumped to the mirrored position after selection
(cherry picked from commit 298791100f65d2fa4616a8c9b7bc0626d705d82f)

M  +4    -5    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_simple.cpp

http://commits.kde.org/calligra/7fabb4adc57c113f5c7ea077ead64bdbf6cd693f
Comment 9 Paul Geraskin 2013-10-10 11:19:39 UTC
the same bug https://bugs.kde.org/show_bug.cgi?id=325839
Comment 10 Halla Rempt 2013-10-10 11:27:12 UTC
*** Bug 325839 has been marked as a duplicate of this bug. ***
Comment 11 Dmitry Kazakov 2013-12-26 13:40:57 UTC
Git commit 8f6678a5b8403792dc252d1828fd59003a48b8c5 by Dmitry Kazakov.
Committed on 26/12/2013 at 13:39.
Pushed by dkazakov into branch 'master'.

Fixed the last non-inverted Y-axis in Advanced Color Selector

It caused the selector jump to random values.

M  +8    -8    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_simple.cpp

http://commits.kde.org/calligra/8f6678a5b8403792dc252d1828fd59003a48b8c5
Comment 12 Dmitry Kazakov 2013-12-28 14:57:30 UTC
Git commit a5e6ef3cc8a8a0b0462fbaa1fcbb853fa4589ee7 by Dmitry Kazakov.
Committed on 26/12/2013 at 13:39.
Pushed by dkazakov into branch 'calligra/2.8'.

Fixed the last non-inverted Y-axis in Advanced Color Selector

It caused the selector jump to random values.

M  +8    -8    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_simple.cpp

http://commits.kde.org/calligra/a5e6ef3cc8a8a0b0462fbaa1fcbb853fa4589ee7