Fixed the last non-inverted Y-axis in Advanced Color Selector

It caused the selector jump to random values.

BUG:294032